--- a/jasmine-standalone-3.4.0/SpecRunner.html
+++ b/jasmine-standalone-3.4.0/SpecRunner.html
@@ -12,10 +12,10 @@
   <script src="lib/jasmine-3.4.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/fizzBuzz.js"></script>
-
+  <script type="text/javascript" src="src/Airport.js"></script>
+  <script type="text/javascript" src="src/Plane.js"></script>
   <!-- include spec files here... -->
-  <script src="spec/fizzBuzzSpec.js"></script>
+  <script type="text/javascript" src="spec/AirportSpec.js"></script>
 
 </head>
 
