subdisplays at bottom

--- a/jasmine-standalone-3.4.0/index.html
+++ b/jasmine-standalone-3.4.0/index.html
@@ -26,6 +26,14 @@
     .arrow{
       font-size: 8vw;
     }
+
+    .subDisplays{
+      font-size: 2vw;
+      position: absolute;
+      bottom: 0;
+      width: inherit;
+    }
+
     body{
       padding: 10vmax;
 
@@ -42,7 +50,7 @@
         </div>
 
       </div>
-      <div class="row">
+      <div class="row subDisplays">
         <div class="col-md-6">
           <p>Power saving</p>
         </div>
