--- a/jasmine-standalone-3.4.0/index.html
+++ b/jasmine-standalone-3.4.0/index.html
@@ -43,11 +43,26 @@
 </head>
 <body>
 
+  <a href="http://jquery.com/">jQuery</a>
+   <script src="jquery.js"></script>
+   <script>
+   $( document ).ready(function() {
+
+       $( '#temperature' ).click(function( event ) {
+
+           alert( "Thanks for visiting!" );
+
+       });
+
+   });
+</script>
+
+
   <div class="row">
     <div class="col-md-6 displayContainer">
       <div class="row">
         <div class="col-md-12 tempDisplay">
-          <p>23&#8451</p>
+          <p id="temperature">23&#8451</p>
         </div>
 
       </div>
@@ -76,6 +91,7 @@
 // <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script> -->
 <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
+
 
 </body>
 
