Change temperature with arrow click

--- a/jasmine-standalone-3.4.0/index.html
+++ b/jasmine-standalone-3.4.0/index.html
@@ -77,8 +77,8 @@
     </div>
 
     <div class="col-md-2 arrow">
-        <div class="row">&#x25B2;</div>
-        <div class ="row">&#x25BC;</div>
+        <div class="row" id="temp-up">&#x25B2;</div>
+        <div class ="row" id="temp-down">&#x25BC;</div>
 
     </div>
 
