reset button works

--- a/jasmine-standalone-3.4.0/index.html
+++ b/jasmine-standalone-3.4.0/index.html
@@ -71,7 +71,7 @@
           <p>Power saving</p>
         </div>
         <div class="col-md-6">
-          <p>Energy usage</p>
+          <p id="temp-reset"> Reset temp</p>
         </div>
       </div>
     </div>
