Add power saving button

--- a/jasmine-standalone-3.4.0/index.html
+++ b/jasmine-standalone-3.4.0/index.html
@@ -68,7 +68,7 @@
       </div>
       <div class="row subDisplays">
         <div class="col-md-6">
-          <p>Power saving</p>
+          <p id="psm">Power saving</p>
         </div>
         <div class="col-md-6">
           <p id="temp-reset"> Reset temp</p>
