Add temperature API

--- a/jasmine-standalone-3.4.0/index.html
+++ b/jasmine-standalone-3.4.0/index.html
@@ -65,9 +65,13 @@
       <div class="row">
         <div class="col-md-12 temperature">
           <p id="temperature">20</p>
+
         </div>
 
       </div>
+      <section>
+        <h3>Current temperature: <span id="current-temperature"></span></h3>
+      </section>
       <div class="row subDisplays">
         <div class="col-md-6">
           <p id="psm">Power saving</p>
