readme and rockpaper js

--- a/jasmine-standalone-3.4.0/SpecRunner.html
+++ b/jasmine-standalone-3.4.0/SpecRunner.html
@@ -12,10 +12,10 @@
   <script src="lib/jasmine-3.4.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="src/Thermostat.js"></script>
+  <script type="text/javascript" src="src/Rockpaper.js"></script>
   <!-- <script type="text/javascript" src="src/Plane.js"></script> -->
   <!-- include spec files here... -->
-  <script type="text/javascript" src="spec/ThermostatSpec.js"></script>
+  <script type="text/javascript" src="spec/RockpaperSpec.js"></script>
 
 </head>
 
